--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav nav-justified">
-                        <li><a class="nav_link current" href="index.html">Main</a></li>
+                        <li><a class="nav_link current" href="#index.html">Main</a></li>
                         <li><a class="nav_link" href="faculty/faculty.html">Faculty</a></li>
                         <li><a class="nav_link" href="MyWork/mywork.html">My Work</a></li>
                         <li><a class="nav_link" href="contact/contact.html">Contact</a></li>
