--- a/MyWork/mywork.html
+++ b/MyWork/mywork.html
@@ -24,10 +24,10 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav nav-justified">
-                        <li><a class="nav_link" href="../index.html">Main</a></li>
-                        <li><a class="nav_link" href="../Faculty/faculty.html">Faculty</a></li>
+                        <li><a class="nav_link" href="http://dombabic.github.io/">Main</a></li>
+                        <li><a class="nav_link" href="../faculty/faculty.html">Faculty</a></li>
                         <li><a class="nav_link current" href="mywork.html">My Work</a></li>
-                        <li><a class="nav_link" href="../Contact/contact.html">Contact</a></li>
+                        <li><a class="nav_link" href="../contact/contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
