--- a/MyWork/mywork.html
+++ b/MyWork/mywork.html
@@ -24,21 +24,23 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav nav-justified">
-                        <li><a class="nav_link" href="http://dombabic.github.io/">Main</a></li>
-                        <li><a class="nav_link" href="../faculty/faculty.html">Faculty</a></li>
+                        <li><a class="nav_link" href="../index.html">Main</a></li>
+                        <li><a class="nav_link" href="../Faculty/faculty.html">Faculty</a></li>
                         <li><a class="nav_link current" href="mywork.html">My Work</a></li>
-                        <li><a class="nav_link" href="../contact/contact.html">Contact</a></li>
+                        <li><a class="nav_link" href="../Contact/contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         
-        <div class="container fill" id="content_holder_faculty">
+        <div class="container fill" id="content_holder_faculty" style="height: 1100px !important;">
             <div id="work_description">
 				<p>Some of my work includes a project for Data Visualization class. The idea behind the project was to visualize branches of science by using D3.js library.</p>
                 <p>For this purpose I used Radial Reingold-Tilford Tree, which seemed like the best way of displaying science branches.</p><br>
 				<img class="work_example" src="branchesofscience.jpg" onclick='window.open("Branches of Science.html","_blank")'><br>
-                <p id="img_note">You can explore the project by clicking on the image.</p><br><br>
+                <p id="img_note">You can explore the project by clicking on the image.</p><br>
+                <p>As a requirement for Chess &amp; Computers class laboratory exercise, I had to create a chess clock using any technology available. Given my interests in front end development, I decided to complete the exercise using HTML, CSS and JS result of which can be tested by clicking on the image below.</p>
+                <img class="work_example" src="CClock/CClock.jpg" onclick='window.open("CClock/CClock.html","_blank")'><br><br>
                 <p>As for the other projects, one I'm currently working on is a fansite for a video game. Other projects include websites which I use to further increase my knowledge of Web technologies.</p>
 			</div>
         </div>
