--- a/faculty/faculty.html
+++ b/faculty/faculty.html
@@ -26,7 +26,7 @@
                         <li><a class="nav_link" href="../index.html">Main</a></li>
                         <li><a class="nav_link current" href="faculty.html">Faculty</a></li>
                         <li><a class="nav_link" href="../MyWork/mywork.html">My Work</a></li>
-                        <li><a class="nav_link" href="../Contact/contact.html">Contact</a></li>
+                        <li><a class="nav_link" href="../contact/contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
