Updated file location

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -25,7 +25,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav nav-justified">
                         <li><a class="nav_link" href="../index.html">Main</a></li>
-                        <li><a class="nav_link" href="../Faculty/faculty.html">Faculty</a></li>
+                        <li><a class="nav_link" href="../faculty/faculty.html">Faculty</a></li>
                         <li><a class="nav_link" href="../MyWork/mywork.html">My Work</a></li>
                         <li><a class="nav_link current" href="contact.html">Contact</a></li>
                     </ul>
