Added new project to MyWork page.
Added tourism project with interactive map to project list.

--- a/MyWork/mywork.html
+++ b/MyWork/mywork.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
         
-        <div class="container fill" id="content_holder_faculty" style="height: 1100px !important;">
+        <div class="container fill" id="content_holder_faculty" style="height: 1500px !important;">
             <div id="work_description">
 				<p>Some of my work includes a project for Data Visualization class. The idea behind the project was to visualize branches of science by using D3.js library.</p>
                 <p>For this purpose I used Radial Reingold-Tilford Tree, which seemed like the best way of displaying science branches.</p><br>
@@ -41,6 +41,8 @@
                 <p id="img_note">You can explore the project by clicking on the image.</p><br>
                 <p>As a requirement for Chess &amp; Computers class laboratory exercise, I had to create a chess clock using any technology available. Given my interests in front end development, I decided to complete the exercise using HTML, CSS and JS result of which can be tested by clicking on the image below.</p>
                 <img class="work_example" src="CClock/CClock.jpg" onclick='window.open("CClock/CClock.html","_blank")'><br><br>
+                <p>One of the most recent projects is an interactive tourism map for Republic of Croatia. The project features a map of the country with its regions and cities of interest. User is provided with a video of tourist attractions for each region and city. Further update to the project will include national parks. Click the image bellow to explore the project.</p>
+                <img class="work_example" src="DataVis/Map.jpg" onclick='window.open("DataVis/TourismInCroatia.html","_blank")'><br><br>
                 <p>As for the other projects, one I'm currently working on is a fansite for a video game. Other projects include websites which I use to further increase my knowledge of Web technologies.</p>
 			</div>
         </div>
